fix: Remove overflow

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -94,6 +94,7 @@ textarea {
 }
 html,
 body {
+    overflow: hidden;
 	height: 100%;
 	overscroll-behavior: none;
 }
